--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins&family=Roboto&display=swap"
+        rel="stylesheet">
 </head>
 
 
@@ -68,7 +72,97 @@
         </div>
     </section>
     <!-- First Donation section end -->
+    <section class="third-section">
+        <div class="third-container">
+            <h1>Their lives depend on <br>
+                your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
 
+    </section>
+    <section class="forth-section">
+        <div>
+            <img src="images/icon.png" alt="">
+
+        </div>
+        <div class="para">
+            <h1>Direct Help</h1>
+            <p>Lorem ipsum dolor sit amet, usu
+                cu esse possit referrentur, at
+                eam falli deterruisset. No duo
+                populo animal noluisse, enim</p>
+        </div>
+
+
+    </section>
+    <section class="fifth-section">
+        <div class="img-width">
+            <img src="images/dua.png" alt="">
+        </div>
+        <div class="img-width">
+            <img src="images/dua.png" alt="">
+        </div>
+        <div class="img-width">
+            <img src="images/dua.png" alt="">
+        </div>
+    </section>
+    <section class="third-section">
+        <div class="third-container">
+            <h1>Extend Your Hand of Charity. Earn <br>
+                Rewards for the Hereafter</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+
+    </section>
+    <section class="love-section">
+        <div class="border-align">
+            <img src="images/loving.png" alt="">
+
+            <br>
+            <h1>Zakat Fund</h1>
+            <br>
+            <p>Lorem ipsum dolor sit amet, usu
+                cu esse possit referrentur, at eam
+                falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <br>
+            <div class="donate-btn"> <u>Donate for Zakat</u> </div>
+        </div>
+        <div class="border-align">
+            <img src="images/loving.png" alt="">
+
+            <br>
+            <h1>Zakat Fund</h1>
+            <br>
+            <p>Lorem ipsum dolor sit amet, usu
+                cu esse possit referrentur, at eam
+                falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <br>
+            <div class="donate-btn"> <u>Donate for Zakat</u> </div>
+        </div>
+        <div class="border-align">
+            <img src="images/loving.png" alt="">
+
+            <br>
+            <h1>Zakat Fund</h1>
+            <br>
+            <p>Lorem ipsum dolor sit amet, usu
+                cu esse possit referrentur, at eam
+                falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <br>
+            <div class="donate-btn"> <u>Donate for Zakat</u> </div>
+        </div>
+
+    </section>
+    <footer>
+        <h1>Eid Ul Adha</h1>
+        <br>
+        <p>I'm gonna do it</p>
+    </footer>
 </body>
 
 </html>
