--- a/index.html
+++ b/index.html
@@ -82,17 +82,65 @@
 
     </section>
     <section class="forth-section">
-        <div>
-            <img src="images/icon.png" alt="">
+        <article class="forth-section-box">
+            <div>
+                <img src="images/icon.png" alt="">
 
-        </div>
-        <div class="para">
-            <h1>Direct Help</h1>
-            <p>Lorem ipsum dolor sit amet, usu
-                cu esse possit referrentur, at
-                eam falli deterruisset. No duo
-                populo animal noluisse, enim</p>
-        </div>
+            </div>
+            <div class="forth-section-box-text">
+                <h1>Direct Help</h1>
+                <p>Lorem ipsum dolor sit amet, usu
+                    cu esse possit referrentur, at
+                    eam falli deterruisset. No duo
+                    populo animal noluisse, enim</p>
+            </div>
+        </article>
+        <article class="forth-section-box">
+            <div>
+                <img src="images/icon.png" alt="">
+
+            </div>
+            <div class="forth-section-box-text">
+                <h1>Direct Help</h1>
+                <p>Lorem ipsum dolor sit amet, usu
+                    cu esse possit referrentur, at
+                    eam falli deterruisset. No duo
+                    populo animal noluisse, enim</p>
+            </div>
+        </article>
+
+
+
+    </section>
+    </section>
+    <section class="forth-section">
+        <article class="forth-section-box">
+            <div>
+                <img src="images/icon.png" alt="">
+
+            </div>
+            <div class="forth-section-box-text">
+                <h1>Direct Help</h1>
+                <p>Lorem ipsum dolor sit amet, usu
+                    cu esse possit referrentur, at
+                    eam falli deterruisset. No duo
+                    populo animal noluisse, enim</p>
+            </div>
+        </article>
+        <article class="forth-section-box">
+            <div>
+                <img src="images/icon.png" alt="">
+
+            </div>
+            <div class="forth-section-box-text">
+                <h1>Direct Help</h1>
+                <p>Lorem ipsum dolor sit amet, usu
+                    cu esse possit referrentur, at
+                    eam falli deterruisset. No duo
+                    populo animal noluisse, enim</p>
+            </div>
+        </article>
+
 
 
     </section>
